--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <link rel="stylesheet" href="https://unpkg.com/bulma@0.7.5/css/bulma.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
     integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
-  <style></style>
+  <link rel="preconnect" href="https://simpsons-quotes-api.herokuapp.com/">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
   <section class="section">
     <div class="container">
       <h1 class="title">Simpson API</h1>
+      <button class="refreshButton">REFRESH</button>
 
       <div class="content" id="simpson"></div>
     </div>
@@ -26,7 +28,7 @@
   <!-- We need to load axios first! -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"
     integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
-  <script></script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
